Fix container spacing issues

--- a/prop-house-webapp/src/components/HomeHeader/HomeHeader.module.css
+++ b/prop-house-webapp/src/components/HomeHeader/HomeHeader.module.css
@@ -1,5 +1,6 @@
 .wrapper {
-  margin: 4rem 0;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
 }
 
 .poweredByNouns {
