--- a/prop-house-webapp/src/components/NavBar/NavBar.module.css
+++ b/prop-house-webapp/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .navbar {
-  margin: 2rem 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .navbarBrand {
   color: var(--brand-black);
